# JokeAPI-Python

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST  README.md  main.py  mypy.ini  pyproject.toml  pyvenv.cfg  requirements.txt  setup.py  test_main.py  version_testing.py
.circleci/: .config.yml.kate-swp  config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
JokeAPI Wrapper/: main.py
jokeapi/: __init__.py  main.py
src/jokeapi/: __init__.py  main.py
tests/: test_main.py
