[tool.poetry]
name = "jokeapi"
version = "1.0.3"
description = "Python API Wrapper for Sv443's JokeAPI (https://v2.jokeapi.dev)"
readme = "README.md"
homepage = "https://pypi.org/project/jokeapi"
repository = "https://github.com/leet-hakker/JokeAPI-Python"
authors = ["leet-hakker <thenamesweretakenalready@gmail.com>"]
maintainers = ["leet-hakker"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.9"
urllib3 = "^1.26.2"
aiohttp = "^3.7.4"
simplejson = "^3.17.2"


[tool.poetry.dev-dependencies]
python-dotenv = "^0.19.0"
black = "^21.6b0"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
